Proyecto/target/generated-sources/antlr4/Compiladores/Proyecto/proyectoParser.java
// Generated from Compiladores\Proyecto\proyecto.g4 by ANTLR 4.5.1
package Compiladores.Proyecto;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class proyectoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RUNNING=1, IMPRIME=2, CICLO=3, FUCTION=4, ENT=5, DEC=6, CAD=7, CONST=8, 
		SUMAR=9, RESTA=10, MULTI=11, DIV=12, Y=13, O=14, NO=15, FAL=16, VER=17, 
		MAYOR=18, MENOR=19, MAYGUAL=20, MEYGUAL=21, IGUAL2=22, NEGIGUAL=23, ASIG=24, 
		END=25, INICIO=26, LLAA=27, LLAC=28, COMI=29, PARA=30, PARC=31, CORA=32, 
		CORC=33, IF=34, THEN=35, FOR=36, MASFOR=37, MENFOR=38, WHILE=39, ID=40, 
		ENTERO=41, DECIMAL=42, CADENA=43, COMMENT=44, WS=45;
	public static final int
		RULE_running = 0, RULE_sentence = 1, RULE_entero_asig = 2, RULE_decimal_asig = 3, 
		RULE_cadena_asig = 4, RULE_consts = 5, RULE_const_asig = 6, RULE_imprimiendo = 7, 
		RULE_ruleif = 8, RULE_condicion = 9, RULE_expr = 10, RULE_comp_expr = 11, 
		RULE_operacion = 12, RULE_comp_operator = 13, RULE_conclusion = 14, RULE_decl_cicloif = 15, 
		RULE_rulefor = 16, RULE_iniciacion = 17, RULE_tope = 18, RULE_tope_op = 19, 
		RULE_paso = 20, RULE_paso_op = 21, RULE_decl_ciclofor = 22, RULE_rulewhile = 23, 
		RULE_comparacion = 24, RULE_bloqueinst = 25, RULE_ent_dec = 26, RULE_operacioneswhile = 27, 
		RULE_ope_varias = 28, RULE_ope_program = 29, RULE_decl_ciclowhile = 30, 
		RULE_nomb_vec = 31, RULE_tipo = 32, RULE_elem_tipo = 33, RULE_elements = 34, 
		RULE_elements_cad = 35, RULE_elem_vec = 36, RULE_elem_vec_cad = 37, RULE_vector_asig = 38, 
		RULE_vector_asig_cad = 39, RULE_fila = 40, RULE_columna = 41, RULE_nomb_mat = 42, 
		RULE_elem_mat = 43, RULE_elem_mat_cad = 44, RULE_matriz_asig = 45, RULE_matriz_asig_cad = 46, 
		RULE_funcion = 47;
	public static final String[] ruleNames = {
		"running", "sentence", "entero_asig", "decimal_asig", "cadena_asig", "consts", 
		"const_asig", "imprimiendo", "ruleif", "condicion", "expr", "comp_expr", 
		"operacion", "comp_operator", "conclusion", "decl_cicloif", "rulefor", 
		"iniciacion", "tope", "tope_op", "paso", "paso_op", "decl_ciclofor", "rulewhile", 
		"comparacion", "bloqueinst", "ent_dec", "operacioneswhile", "ope_varias", 
		"ope_program", "decl_ciclowhile", "nomb_vec", "tipo", "elem_tipo", "elements", 
		"elements_cad", "elem_vec", "elem_vec_cad", "vector_asig", "vector_asig_cad", 
		"fila", "columna", "nomb_mat", "elem_mat", "elem_mat_cad", "matriz_asig", 
		"matriz_asig_cad", "funcion"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'running'", "'imprime'", "'ciclo'", "'fuction'", "'ent'", "'dec'", 
		"'cad'", "'const'", "'+'", "'-'", "'*'", "'/'", "'y'", "'o'", "'nou'", 
		"'fal'", "'ver'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'='", 
		"','", "':'", "'{'", "'}'", "'\"'", "'('", "')'", "'['", "']'", "'if'", 
		"'then'", "'for'", "'++'", "'--'", "'while'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "RUNNING", "IMPRIME", "CICLO", "FUCTION", "ENT", "DEC", "CAD", "CONST", 
		"SUMAR", "RESTA", "MULTI", "DIV", "Y", "O", "NO", "FAL", "VER", "MAYOR", 
		"MENOR", "MAYGUAL", "MEYGUAL", "IGUAL2", "NEGIGUAL", "ASIG", "END", "INICIO", 
		"LLAA", "LLAC", "COMI", "PARA", "PARC", "CORA", "CORC", "IF", "THEN", 
		"FOR", "MASFOR", "MENFOR", "WHILE", "ID", "ENTERO", "DECIMAL", "CADENA", 
		"COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "proyecto.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public proyectoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RunningContext extends ParserRuleContext {
		public TerminalNode RUNNING() { return getToken(proyectoParser.RUNNING, 0); }
		public TerminalNode ID() { return getToken(proyectoParser.ID, 0); }
		public List<TerminalNode> INICIO() { return getTokens(proyectoParser.INICIO); }
		public TerminalNode INICIO(int i) {
			return getToken(proyectoParser.INICIO, i);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public RunningContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_running; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterRunning(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitRunning(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitRunning(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RunningContext running() throws RecognitionException {
		RunningContext _localctx = new RunningContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_running);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(RUNNING);
			setState(97);
			match(ID);
			setState(98);
			match(INICIO);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - -1)) & ~0x3f) == 0 && ((1L << (_la - -1)) & ((1L << (EOF - -1)) | (1L << (IMPRIME - -1)) | (1L << (CICLO - -1)) | (1L << (FUCTION - -1)) | (1L << (ENT - -1)) | (1L << (DEC - -1)) | (1L << (CAD - -1)) | (1L << (CONST - -1)) | (1L << (MAYOR - -1)) | (1L << (MENOR - -1)) | (1L << (MAYGUAL - -1)) | (1L << (MEYGUAL - -1)) | (1L << (IGUAL2 - -1)) | (1L << (NEGIGUAL - -1)) | (1L << (LLAA - -1)) | (1L << (COMI - -1)) | (1L << (PARA - -1)) | (1L << (CORA - -1)) | (1L << (MASFOR - -1)) | (1L << (MENFOR - -1)) | (1L << (ID - -1)) | (1L << (ENTERO - -1)) | (1L << (DECIMAL - -1)) | (1L << (CADENA - -1)))) != 0)) {
				{
				{
				setState(99);
				sentence();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(INICIO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Entero_asigContext entero_asig() {
			return getRuleContext(Entero_asigContext.class,0);
		}
		public Decimal_asigContext decimal_asig() {
			return getRuleContext(Decimal_asigContext.class,0);
		}
		public Cadena_asigContext cadena_asig() {
			return getRuleContext(Cadena_asigContext.class,0);
		}
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Const_asigContext const_asig() {
			return getRuleContext(Const_asigContext.class,0);
		}
		public ImprimiendoContext imprimiendo() {
			return getRuleContext(ImprimiendoContext.class,0);
		}
		public RuleifContext ruleif() {
			return getRuleContext(RuleifContext.class,0);
		}
		public CondicionContext condicion() {
			return getRuleContext(CondicionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Comp_exprContext comp_expr() {
			return getRuleContext(Comp_exprContext.class,0);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public Comp_operatorContext comp_operator() {
			return getRuleContext(Comp_operatorContext.class,0);
		}
		public ConclusionContext conclusion() {
			return getRuleContext(ConclusionContext.class,0);
		}
		public Decl_cicloifContext decl_cicloif() {
			return getRuleContext(Decl_cicloifContext.class,0);
		}
		public RuleforContext rulefor() {
			return getRuleContext(RuleforContext.class,0);
		}
		public IniciacionContext iniciacion() {
			return getRuleContext(IniciacionContext.class,0);
		}
		public TopeContext tope() {
			return getRuleContext(TopeContext.class,0);
		}
		public Tope_opContext tope_op() {
			return getRuleContext(Tope_opContext.class,0);
		}
		public PasoContext paso() {
			return getRuleContext(PasoContext.class,0);
		}
		public Paso_opContext paso_op() {
			return getRuleContext(Paso_opContext.class,0);
		}
		public Decl_cicloforContext decl_ciclofor() {
			return getRuleContext(Decl_cicloforContext.class,0);
		}
		public RulewhileContext rulewhile() {
			return getRuleContext(RulewhileContext.class,0);
		}
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public BloqueinstContext bloqueinst() {
			return getRuleContext(BloqueinstContext.class,0);
		}
		public Ent_decContext ent_dec() {
			return getRuleContext(Ent_decContext.class,0);
		}
		public Ope_variasContext ope_varias() {
			return getRuleContext(Ope_variasContext.class,0);
		}
		public Ope_programContext ope_program() {
			return getRuleContext(Ope_programContext.class,0);
		}
		public OperacioneswhileContext operacioneswhile() {
			return getRuleContext(OperacioneswhileContext.class,0);
		}
		public Decl_ciclowhileContext decl_ciclowhile() {
			return getRuleContext(Decl_ciclowhileContext.class,0);
		}
		public Nomb_vecContext nomb_vec() {
			return getRuleContext(Nomb_vecContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Elem_tipoContext elem_tipo() {
			return getRuleContext(Elem_tipoContext.class,0);
		}
		public ElementsContext elements() {
			return getRuleContext(ElementsContext.class,0);
		}
		public Elements_cadContext elements_cad() {
			return getRuleContext(Elements_cadContext.class,0);
		}
		public Elem_vecContext elem_vec() {
			return getRuleContext(Elem_vecContext.class,0);
		}
		public Elem_vec_cadContext elem_vec_cad() {
			return getRuleContext(Elem_vec_cadContext.class,0);
		}
		public Vector_asigContext vector_asig() {
			return getRuleContext(Vector_asigContext.class,0);
		}
		public Vector_asig_cadContext vector_asig_cad() {
			return getRuleContext(Vector_asig_cadContext.class,0);
		}
		public FilaContext fila() {
			return getRuleContext(FilaContext.class,0);
		}
		public ColumnaContext columna() {
			return getRuleContext(ColumnaContext.class,0);
		}
		public Nomb_matContext nomb_mat() {
			return getRuleContext(Nomb_matContext.class,0);
		}
		public Elem_matContext elem_mat() {
			return getRuleContext(Elem_matContext.class,0);
		}
		public Elem_mat_cadContext elem_mat_cad() {
			return getRuleContext(Elem_mat_cadContext.class,0);
		}
		public Matriz_asigContext matriz_asig() {
			return getRuleContext(Matriz_asigContext.class,0);
		}
		public Matriz_asig_cadContext matriz_asig_cad() {
			return getRuleContext(Matriz_asig_cadContext.class,0);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				entero_asig();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				decimal_asig();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				cadena_asig();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				consts();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(111);
				const_asig();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				imprimiendo();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(113);
				ruleif();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(114);
				condicion();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(115);
				expr(0);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(116);
				comp_expr();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(117);
				operacion();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(118);
				comp_operator();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(119);
				conclusion();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(120);
				decl_cicloif();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(121);
				rulefor();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(122);
				iniciacion();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(123);
				tope();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(124);
				tope_op();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(125);
				paso();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(126);
				paso_op();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(127);
				decl_ciclofor();
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(128);
				rulewhile();
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(129);
				comparacion();
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(130);
				bloqueinst();
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(131);
				ent_dec();
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(132);
				ope_varias();
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(133);
				ope_program();
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(134);
				operacioneswhile();
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(135);
				decl_ciclowhile();
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(136);
				nomb_vec();
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(137);
				tipo();
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 32);
				{
				setState(138);
				elem_tipo();
				}
				break;
			case 33:
				enterOuterAlt(_localctx, 33);
				{
				setState(139);
				elements();
				}
				break;
			case 34:
				enterOuterAlt(_localctx, 34);
				{
				setState(140);
				elements_cad();
				}
				break;
			case 35:
				enterOuterAlt(_localctx, 35);
				{
				setState(141);
				elem_vec();
				}
				break;
			case 36:
				enterOuterAlt(_localctx, 36);
				{
				setState(142);
				elem_vec_cad();
				}
				break;
			case 37:
				enterOuterAlt(_localctx, 37);
				{
				setState(143);
				vector_asig();
				}
				break;
			case 38:
				enterOuterAlt(_localctx, 38);
				{
				setState(144);
				vector_asig_cad();
				}
				break;
			case 39:
				enterOuterAlt(_localctx, 39);
				{
				setState(145);
				fila();
				}
				break;
			case 40:
				enterOuterAlt(_localctx, 40);
				{
				setState(146);
				columna();
				}
				break;
			case 41:
				enterOuterAlt(_localctx, 41);
				{
				setState(147);
				nomb_mat();
				}
				break;
			case 42:
				enterOuterAlt(_localctx, 42);
				{
				setState(148);
				elem_mat();
				}
				break;
			case 43:
				enterOuterAlt(_localctx, 43);
				{
				setState(149);
				elem_mat_cad();
				}
				break;
			case 44:
				enterOuterAlt(_localctx, 44);
				{
				setState(150);
				matriz_asig();
				}
				break;
			case 45:
				enterOuterAlt(_localctx, 45);
				{
				setState(151);
				matriz_asig_cad();
				}
				break;
			case 46:
				enterOuterAlt(_localctx, 46);
				{
				setState(152);
				funcion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entero_asigContext extends ParserRuleContext {
		public TerminalNode ENT() { return getToken(proyectoParser.ENT, 0); }
		public TerminalNode ID() { return getToken(proyectoParser.ID, 0); }
		public TerminalNode ASIG() { return getToken(proyectoParser.ASIG, 0); }
		public TerminalNode ENTERO() { return getToken(proyectoParser.ENTERO, 0); }
		public TerminalNode END() { return getToken(proyectoParser.END, 0); }
		public Entero_asigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entero_asig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterEntero_asig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitEntero_asig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitEntero_asig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entero_asigContext entero_asig() throws RecognitionException {
		Entero_asigContext _localctx = new Entero_asigContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entero_asig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(ENT);
			setState(156);
			match(ID);
			setState(157);
			match(ASIG);
			setState(158);
			match(ENTERO);
			setState(159);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decimal_asigContext extends ParserRuleContext {
		public TerminalNode DEC() { return getToken(proyectoParser.DEC, 0); }
		public TerminalNode ID() { return getToken(proyectoParser.ID, 0); }
		public TerminalNode ASIG() { return getToken(proyectoParser.ASIG, 0); }
		public TerminalNode DECIMAL() { return getToken(proyectoParser.DECIMAL, 0); }
		public TerminalNode END() { return getToken(proyectoParser.END, 0); }
		public Decimal_asigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decimal_asig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterDecimal_asig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitDecimal_asig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitDecimal_asig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decimal_asigContext decimal_asig() throws RecognitionException {
		Decimal_asigContext _localctx = new Decimal_asigContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decimal_asig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(DEC);
			setState(162);
			match(ID);
			setState(163);
			match(ASIG);
			setState(164);
			match(DECIMAL);
			setState(165);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cadena_asigContext extends ParserRuleContext {
		public TerminalNode CAD() { return getToken(proyectoParser.CAD, 0); }
		public TerminalNode ID() { return getToken(proyectoParser.ID, 0); }
		public TerminalNode ASIG() { return getToken(proyectoParser.ASIG, 0); }
		public TerminalNode CADENA() { return getToken(proyectoParser.CADENA, 0); }
		public TerminalNode END() { return getToken(proyectoParser.END, 0); }
		public Cadena_asigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cadena_asig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterCadena_asig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitCadena_asig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitCadena_asig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cadena_asigContext cadena_asig() throws RecognitionException {
		Cadena_asigContext _localctx = new Cadena_asigContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cadena_asig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(CAD);
			setState(168);
			match(ID);
			setState(169);
			match(ASIG);
			setState(170);
			match(CADENA);
			setState(171);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstsContext extends ParserRuleContext {
		public Entero_asigContext entero_asig() {
			return getRuleContext(Entero_asigContext.class,0);
		}
		public Decimal_asigContext decimal_asig() {
			return getRuleContext(Decimal_asigContext.class,0);
		}
		public ConstsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).enterConsts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof proyectoListener ) ((proyectoListener)listener).exitConsts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof proyectoVisitor ) return ((proyectoVisitor<? extends T>)visitor).visitConsts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstsContext consts() throws RecognitionException {
		ConstsContext _localctx = new ConstsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_consts);
		try {
			setState(175);
			switch (_input.LA(1)) {
			case ENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				entero_asig();
				}
				break;
			case DEC:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				decimal_asig();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_asigContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(proyectoParser.CONST, 0); }
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Const_asigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_asig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
